--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -123,23 +123,23 @@
 
 @media (max-width: 768px) {
     .about {
-        gap: 80px;
-        margin: 50px 70px;
-        align-items: start;
+        margin: 50px 40px;
+        align-items: center;
+        gap: 60px;
     }
 
     .about-title h1{
         font-size: 50px;
-        padding: 0;
     }
 
     .about-title img {
         width: 130px;
-        right: -20px;
+        right: -10px;
     }
 
     .about-section {
         flex-direction: column;
+        gap: 60px;
     }
 
     .about-left {
@@ -147,17 +147,16 @@
     }
 
     .about-para {
-        font-size: 18px;
-        line-height: 32px;
+        font-size: 20px;
+        line-height: 30px;
     }
 
     .about-skill {
         gap: 20px;
-        align-items: center;
     }
 
     .about-skill p {
-        font-size: 20px;
+        font-size: 22px;
     }
 
     .about-skill hr {
@@ -166,10 +165,11 @@
 
     .about-achievements {
         justify-content: space-between;
+        gap: 30px;
     }
 
     .about-achievement {
-        gap: 10px;
+        gap: 15px;
     }
 
     .about-achievement h1 {
@@ -180,5 +180,57 @@
     .about-achievement p {
         text-align: center;
         font-size: 16px;
+    }
+}
+
+/* For Mobile Responsive */
+@media (max-width: 600px) {
+    .about {
+        margin: 30px 20px;
+        gap: 40px;
+    }
+
+    .about-title h1 {
+        font-size: 45px;
+    }
+
+    .about-title img {
+        width: 100px;
+        right: -15px;
+    }
+
+    .about-para {
+        font-size: 18px;
+        line-height: 28px;
+    }
+
+    .about-skills {
+        gap: 10px;
+    }
+
+    .about-skill {
+        gap: 10px;
+    }
+
+    .about-skill p {
+        font-size: 18px;
+    }
+
+    .about-skill hr {
+        height: 4px;
+    }
+
+    .about-achievements {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .about-achievement h1 {
+        font-size: 36px;
+    }
+
+    .about-achievement p {
+        font-size: 14px;
     }
 }
