--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -161,24 +161,25 @@
 
 @media (max-width: 768px) {
     .contact {
-        gap: 50px;
-        margin: 50px 70px;
-        align-items: start;
+        gap: 60px;
+        margin: 50px 40px;
+        align-items: center;
     }
 
     .contact-title h1 {
         padding: 0;
-        font-size: 50px;
+        font-size: 60px;
         font-weight: 600;
     }
 
     .contact-title img {
-        width: 130px;
-        margin-right: -20px;
+        width: 120px;
+        margin-right: -10px;
     }
 
     .contact-section {
         flex-direction: column;
+        gap: 60px;
     }
 
     .contact-left h1 {
@@ -214,5 +215,59 @@
     .contact-submit {
         font-size: 20px;
         padding: 15px 40px;
+    }
+}
+
+/* For Small Mobile  */
+@media (max-width: 600px) {
+    .contact {
+        margin: 30px 20px;
+        gap: 40px;
+    }
+
+    .contact-title h1 {
+        font-size: 45px;
+    }
+
+    .contact-title img {
+        width: 100px;
+        right: -15px;
+    }
+
+    .contact-left h1 {
+        font-size: 36px;
+    }
+
+    .contact-left p {
+        font-size: 16px;
+        line-height: 28px;
+    }
+
+    .contact-details {
+        font-size: 18px;
+    }
+
+    .contact-detail {
+        gap: 15px;
+    }
+
+    .contact-right label {
+        font-size: 18px;
+    }
+
+    .contact-right input {
+        font-size: 18px;
+        height: 60px;
+    }
+
+    .contact-right textarea {
+        font-size: 18px;
+        padding: 20px;
+        width: 100%;
+    }
+
+    .contact-submit {
+        font-size: 18px;
+        padding: 15px 35px;
     }
 }
