--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -76,19 +76,23 @@
 }
 
 @media (max-width: 768px) {
+    .hero {
+        gap: 25px; /* Reduce the gap between elements */
+    }
+
     .hero img {
         margin-top: 120px;
         width: 260px;
     }
 
     .hero h1 {
-        margin-top: 50px;
+        margin-top: 30px;
         width: 90%;
         font-size: 50px;
     }
 
     .hero p {
-        width: 60%;
+        width: 80%;
         font-size: 18px;
         line-height: 32px;
         margin: 10px 0px;
@@ -109,5 +113,10 @@
     .hero-resume {
         padding: 20px 50px;
         border-radius: 40px;
+    }
+
+    .hero-action {
+        flex-direction: column;
+        align-items: center;
     }
 }
