--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -88,7 +88,7 @@
 
     .mywork-container img {
         width: 100%;
-        height: 100%;
+        height: auto;
     }
 
     .mywork-showmore {
