--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -70,11 +70,12 @@
         display: block;
         position: fixed;
         right: 30px;
+        z-index: 2;
     }
 
     .nav-mob-close {
-        display: block;
-        position: relative;
+        display: none;
+        position: absolute;
         top: 30px;
         left: 290px;
         width: 30px;
@@ -89,7 +90,7 @@
         background-color: #1F0016;
         width: 350px;
         height: 100%;
-        z-index: 2;
+        z-index: 1;
         transition: right 0.5s;
         right: -350px;
     }
@@ -99,5 +100,23 @@
         padding-left: 100px;
         flex-direction: row;
         gap: 20px;
+    }
+
+    .nav-mob-open {
+        cursor: pointer;
+    }
+
+    .nav-mob-close {
+        cursor: pointer;
+        z-index: 3;
+    }
+
+    /* Mobile menu open state */
+    .nav-menu.open {
+        right: 0; /* Slide menu into view */
+    }
+
+    .nav-menu li img {
+        display: none; /* Remove images for better readability on mobile */
     }
 }
