--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 80px;
-    margin: 80px 170px;
+    gap: 5rem;
+  margin: 5rem 10.625rem;
 }
 
 .mywork-title {
@@ -12,8 +12,8 @@
 }
 
 .mywork-title h1 {
-    padding: 0px 30px;
-    font-size: 80px;
+    padding: 0px 1.875rem;
+    font-size: 5rem;
     font-weight: 600;
 }
 
@@ -27,33 +27,33 @@
 .mywork-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 40px;
+    gap: 2.5rem;
 }
 
 .mywork-container img {
     box-sizing: border-box;
-    width: 410px;
-    height: 280px;
+    width: 25.625rem; 
+    height: 17.5rem;
     transition: 0.3s;
     cursor: pointer;
 }
 
 .mywork-container img:hover {
     transform: scale(1.10);
-    border: 4px solid #ff00ff;
-    border-radius: 10px;
+    border: 0.25rem solid #ff00ff;
+    border-radius: 0.625rem;
     transition: 0.3s;
 }
 
 .mywork-showmore {
     display: flex;
-    gap: 15px;
+    gap: 0.9375rem;
     border-radius: 50px;
     border: 2px solid white;
-    padding: 30px 60px;
-    font-size: 22px;
+    padding: 1.875rem 3.75rem;
+    font-size: 1.375rem;
     font-weight: 500;
-    margin-bottom: 80px;
+    margin-bottom: 5rem;
     transition: 0.6s;
     cursor: pointer;
 }
@@ -65,25 +65,24 @@
 
 @media (max-width: 768px) {
     .mywork {
-        gap: 30px;
-        margin: 50px 70px;
+        gap: 1.875rem;
+        margin: 3.125rem 4.375rem; 
         align-items: start;
     }
 
     .mywork-title h1 {
         padding: 0;
-        font-size: 50px;
+        font-size: 3.125rem;
         font-weight: 600;
     }
 
     .mywork-title img {
-        width: 130px;
-        margin-right: -20px;
+        width: 8.125rem;
     }
 
     .mywork-container {
         grid-template-columns: 1fr 1fr;
-        gap: 30px;
+        gap: 1.875rem;
     }
 
     .mywork-container img {
@@ -92,8 +91,8 @@
     }
 
     .mywork-showmore {
-        padding: 20px 40px;
-        font-size: 18px;
+        padding: 1.25rem 2.5rem; 
+        font-size: 1.125rem; 
         margin: 50px auto;
         cursor: pointer;
     }
