--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -2,19 +2,19 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 35px;
+    gap: 2.1875rem
 }
 
 .hero img {
-    margin-top: 150px;
-    width: 300px;  
+    margin-top: 9.375rem; 
+    width: 18.75rem; 
     height: auto;  
 }
 
 .hero h1 {
     text-align: center;
     width: 70%;
-    font-size: 90px;
+    font-size: 5.625rem;;
     font-weight: 600;
 }
 
@@ -28,22 +28,22 @@
 .hero p {
     width: 50%;
     text-align: center;
-    font-size: 24px;
-    font-weight: 40px;
+    font-size: 1.5rem;
+    font-weight: 40;
 }
 
 .hero-action {
     display: flex;
     align-items: center;
-    gap: 25px;
-    font-size: 24px;
+    gap: 1.5625rem;
+    font-size: 1.5rem;
     font-weight: 500;
-    margin-bottom: 50px;
+    margin-bottom: 3.125rem;
 }
 
 .hero-connect {
-    padding: 25px 45px;
-    border-radius: 50px;
+    padding: 1.5625rem 2.8125rem; 
+  border-radius: 3.125rem;
     background: linear-gradient(264deg, #DF8908 -5.09%, #B415FF 106.28%);
     cursor: pointer;
 }
@@ -55,16 +55,16 @@
 }
 
 .hero-resume {
-    padding: 25px 75px;
-    border-radius: 50px;
-    border: 2px solid #FFF;
+    padding: 1.5625rem 4.6875rem;
+    border-radius: 3.125rem;
+    border: 0.125rem solid #FFF;
     cursor: pointer;
     background: linear-gradient(264deg, #9f40d6 -5.09%, #0fce85 106.28%);
 }
 
 
 .hero-connect:hover {
-    border:2px solid white;
+    border: 0.125rem solid white;
 }
 
 .hero-resume:hover {
@@ -77,42 +77,44 @@
 
 @media (max-width: 768px) {
     .hero {
-        gap: 25px; /* Reduce the gap between elements */
+        gap: 1.5625rem; /* Reduce the gap between elements */
     }
 
     .hero img {
-        margin-top: 120px;
-        width: 260px;
+        margin-top: 7.5rem; 
+        width: 16.25rem;
     }
 
     .hero h1 {
-        margin-top: 30px;
         width: 90%;
-        font-size: 50px;
+        margin-top: 1.875rem;;
+        font-size: 3.125rem;
     }
 
     .hero p {
         width: 80%;
-        font-size: 18px;
-        line-height: 32px;
-        margin: 10px 0px;
+        font-size: 1.125rem; 
+        line-height: 2rem; 
+        margin: 0.625rem 0;
     }
 
     .hero-action {
-        gap: 16px;
-        font-size: 18px;
+        gap: 1rem;
+        font-size: 1.125rem;
         font-weight: 500;
-        margin-bottom: 50px;
+        margin-bottom: 3.125rem;
+        flex-direction: column;
+        align-items: center;
     }
 
     .hero-connect {
-        padding: 20px 30px;
-        border-radius: 40px;
+        padding: 1.25rem 1.875rem;
+        border-radius: 2.5rem;
     }
 
     .hero-resume {
-        padding: 20px 50px;
-        border-radius: 40px;
+        padding: 1.25rem 3.125rem;;
+        border-radius: 2.5rem;
     }
 
     .hero-action {
