--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,11 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 20px 170px;
+    margin: 1.25rem 10.625rem;
 }
 
 .logo {
-    height: 10px;   
+    height: 0.625rem;   
     width: auto;    
   }
 
@@ -14,15 +14,15 @@
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 60px;
-    font-size: 20px;
+    gap: 3.75rem;
+    font-size: 1.25rem;
 }
 
 .nav-connect {
-    padding: 20px 40px;
-    border-radius: 50px;
+    padding: 1.25rem 2.5rem; 
+    border-radius: 3.125rem; 
     background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
-    font-size: 22px;
+    font-size: 1.375rem;
     cursor: pointer;
     transition: 0.5s;
 }
@@ -59,7 +59,7 @@
 
 @media(max-width: 768px) {
     .navbar {
-        margin: 20px 50px;
+        margin: 1.25rem 3.125rem;;
     }
     
     .nav-connect {
@@ -69,16 +69,16 @@
     .nav-mob-open {
         display: block;
         position: fixed;
-        right: 30px;
+        right: 1.875rem;
         z-index: 2;
     }
 
     .nav-mob-close {
         display: none;
         position: absolute;
-        top: 30px;
-        left: 290px;
-        width: 30px;
+        top: 1.875rem; 
+        left: 18.125rem; 
+        width: 1.875rem; 
     }
 
     .nav-menu {
@@ -86,20 +86,20 @@
         flex-direction: column;
         align-items: start;
         top: 0;
-        gap: 30px;
+        gap: 1.875rem;
         background-color: #1F0016;
-        width: 350px;
+        width: 21.875rem;
         height: 100%;
         z-index: 1;
         transition: right 0.5s;
-        right: -350px;
+        right: -21.875rem;
     }
 
     .nav-menu li {
-        font-size: 30px;
-        padding-left: 100px;
+        font-size: 1.875rem;
+        padding-left: 6.25rem;
         flex-direction: row;
-        gap: 20px;
+        gap: 1.25rem;
     }
 
     .nav-mob-open {
