--- a/src/Components/WorkExperience/WorkExperience.css
+++ b/src/Components/WorkExperience/WorkExperience.css
@@ -133,11 +133,11 @@
   
   @media (max-width: 768px) {
     .experience-title h1{
-      font-size: 40px;
+      font-size: 2.5rem;
     }
   
     .timeline {
-      padding-left: 20px;
+      padding-left: 1.25rem;
     }
   
     .timeline-item-content {
@@ -146,25 +146,25 @@
     }
   
     .timeline-img {
-      width: 60px;
-      height: 60px;
-      margin-bottom: 12px;
+      width: 3.75rem;
+    height: 3.75rem; 
+    margin-bottom: 0.75rem;
     }
   
     .timeline-text h3 {
-      font-size: 20px;
+      font-size: 1.25rem;
     }
   
     .timeline-text h4 {
-      font-size: 16px;
+      font-size: 1rem;
     }
   
     .timeline-text p {
-      font-size: 14px;
+      font-size: 0.875rem;
     }
   
     .timeline-tag {
-      left: -40px;
-      top: 0;
+      left: -2.5rem; 
+    top: 0;
     }
   }
